--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "cs350team10/lib/cs350-project-v0_1.jar"
+        "cs350team10/lib/cs350-project-v0_1.jar",
+        "/Users/dominicalvarez/Downloads/cs350-project-v0_2.jar"
     ]
 }
