--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "cs350team10/lib/cs350-project-v0_1.jar",
-        "/Users/dominicalvarez/Downloads/cs350-project-v0_2.jar"
+        "/Users/dominicalvarez/Downloads/cs350-project-v0_2.jar",
+        "/Users/dominicalvarez/Downloads/cs350-project-v0_3.jar"
     ]
 }
