--- a/cs350team10/.vscode/settings.json
+++ b/cs350team10/.vscode/settings.json
@@ -7,7 +7,10 @@
             "/Users/jdiaz/Documents/GitHub/cs350-project-v0_2.jar"
         ],
         "exclude": [
-            "lib/cs350-project-v0_1.jar"
+            "lib/cs350-project-v0_1.jar",
+            "lib/cs350-project-v0_1 2.jar",
+            "lib/cs350-project-v0_2.jar",
+            "lib/cs350-project-v0_3.jar"
         ]
     }
 }
